Integrate benchmarks matrix automation and publish home-directory results.
Default the stack to the aeron-io/benchmarks workflow, deploy wrapper assets, add configurable driver matrix modes, and run the matrix after node provisioning when run_benchmarks is enabled. Persist progress and artifacts under the controller home directory for clear install/run visibility.